--- a/ui.css
+++ b/ui.css
@@ -1,1 +1,9 @@
-@import url("/core.css");
+@import url("/utils/reset.css");
+@import url("/utils/color.css");
+@import url("/pages/components/alert/alert.css");
+/* avatar.css is imported in badge.css */
+@import url("/pages/components/badge/badge.css");
+@import url("/pages/components/button/button.css");
+@import url("/pages/components/card/card.css");
+@import url("/pages/components/image/image.css");
+@import url("/pages/components/input/input.css");
