--- a/pages/components/badge/badge.html
+++ b/pages/components/badge/badge.html
@@ -89,6 +89,10 @@
         </div>
         <div class="sui_avatar">
           <img src="/assets/svg/cart.svg" alt="" />
+          <div class="bd_num bd_red">888</div>
+        </div>
+        <div class="sui_avatar">
+          <img src="/assets/svg/cart.svg" alt="" />
           <div class="bd_num bd_red">8</div>
         </div>
       </div>
