add text-utilities, lists; add landing page

--- a/pages/nav.css
+++ b/pages/nav.css
@@ -54,6 +54,13 @@ nav {
   padding-top: 4rem;
   font-size: 1.6rem;
   position: relative;
+  /* Hide scrollbar for IE, Edge and Firefox */
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+/* Hide scrollbar for Chrome, Safari and Opera */
+nav::-webkit-scrollbar {
+  display: none;
 }
 main {
   grid-area: main;
