--- a/utils/color.css
+++ b/utils/color.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900&display=swap");
 :root {
   font-family: "Montserrat", sans-serif;
 
@@ -21,26 +21,33 @@
   --VARIANT-1M1: #ffdacf;
   --VARIANT-1: #f7c0b5;
   --VARIANT-1P1: #f4afa1;
+  --VARIANT-1-TXT-BG: #f45b19;
 
   --VARIANT-2BG: #e8ffff;
   --VARIANT-2M1: #cffcf6;
   --VARIANT-2: #b5e2dc;
   --VARIANT-2P1: #a6dcd5;
+  --VARIANT-2-TXT-BG: green;
 
   --VARIANT-3BG: #ffffdf;
   --VARIANT-3M1: #fff4ac;
   --VARIANT-3: #f4da92;
   --VARIANT-3P1: #f2d380;
+  --VARIANT-3-TXT-BG: #ed9f3a;
 
   --WHITE: #ffffff;
   --WHITE-C: #ffffffcc;
   --WHITE-A: #ffffffaa;
 
+  --SHADE1: #f7f5f5;
+  --SHADE2: #f0f0f0;
+  --SHADE3: #e0e0e0;
+  --SHADE4: #d0d0d0;
 
   --BLACK: #000000;
   --BLACK-C: #000000cc;
   --BLACK-A: #000000aa;
-  --BLACK-BG:#232128;
+  --BLACK-BG: #232128;
 
   --PRICE-OFFER: red;
 
@@ -62,4 +69,101 @@
 }
 .sui_v3 {
   background: var(--VARIANT-3);
+}
+.sui_color_text_p {
+  color: var(--PRIMARY);
+}
+.sui_color_text_v1 {
+  color: var(--VARIANT-1-TXT-BG);
+}
+.sui_color_text_v2 {
+  color: var(--VARIANT-2-TXT-BG);
+}
+.sui_color_text_v3 {
+  color: var(--VARIANT-3-TXT-BG);
+}
+.sui_color_bg_p {
+  color: var(--WHITE);
+  background: var(--PRIMARY);
+}
+.sui_color_bg_v1 {
+  color: var(--WHITE);
+  background: var(--VARIANT-1-TXT-BG);
+}
+.sui_color_bg_v2 {
+  color: var(--WHITE);
+  background: var(--VARIANT-2-TXT-BG);
+}
+.sui_color_bg_v3 {
+  color: var(--WHITE);
+  background: var(--VARIANT-3-TXT-BG);
+}
+/* Typography */
+h1,
+.h1 {
+  font-size: 4.8rem;
+}
+h2,
+.h2 {
+  font-size: 3.2rem;
+}
+h3,
+.h3 {
+  font-size: 2.4rem;
+}
+h4,
+.h4 {
+  font-size: 2rem;
+}
+h5,
+.h5 {
+  font-size: 1.6rem;
+}
+p,
+.p {
+  font-size: 1.2rem;
+}
+.fw3 {
+  font-weight: 300;
+}
+.fw4 {
+  font-weight: 400;
+}
+.fw5 {
+  font-weight: 500;
+}
+.fw6 {
+  font-weight: 600;
+}
+.fw7 {
+  font-weight: 700;
+}
+.fw8 {
+  font-weight: 800;
+}
+.fw9 {
+  font-weight: 900;
+}
+/* FLEX */
+.flex_rw {
+  display: flex;
+}
+.flex_cl {
+  display: flex;
+  flex-direction: column;
+}
+.flex_ac {
+  align-items: center;
+}
+.flex_wp {
+  flex-wrap: wrap;
+}
+.flex_g1 {
+  gap: 1rem;
+}
+.flex_g15 {
+  gap: 1.5rem;
+}
+.flex_g2 {
+  gap: 2rem;
 }
