--- a/utils/color.css
+++ b/utils/color.css
@@ -27,7 +27,7 @@
   --VARIANT-2M1: #cffcf6;
   --VARIANT-2: #b5e2dc;
   --VARIANT-2P1: #a6dcd5;
-  --VARIANT-2-TXT-BG: green;
+  --VARIANT-2-TXT-BG: #1a8d1a;
 
   --VARIANT-3BG: #ffffdf;
   --VARIANT-3M1: #fff4ac;
