--- a/pages/nav.css
+++ b/pages/nav.css
@@ -51,9 +51,10 @@ nav {
   gap: 2px;
   grid-area: nav;
   margin: 0 3rem;
-  padding-top: 4rem;
+  padding: 4rem 0;
   font-size: 1.6rem;
   position: relative;
+  overflow: scroll;
   /* Hide scrollbar for IE, Edge and Firefox */
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
