--- a/pages/style.css
+++ b/pages/style.css
@@ -14,6 +14,7 @@ main h1 {
   font-size: 4rem;
 }
 #rem_notice {
+  padding-top: 2rem;
   color: var(--PRIMARY);
   cursor: pointer;
 }
@@ -134,6 +135,7 @@ pre b {
 .sui_btn_wrapper {
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-between;
   gap: 2rem;
   padding-top: 2rem;
 }
@@ -252,4 +254,65 @@ pre b {
 .sui_show_modal_btn_wrapper {
   margin: 2rem 0 0 0;
   justify-content: center;
+}
+.sui_rating_wrapper {
+  justify-content: space-between;
+  margin-top: 1rem;
+}
+.sui_toast_wrapper {
+  display: grid;
+  place-content: center;
+  position: fixed;
+  bottom: 5rem;
+  left: 0;
+  z-index: 2;
+  width: 100vw;
+}
+#toast-std,
+#toast-v1,
+#toast-v2,
+#toast-v3 {
+  visibility: hidden;
+  grid-column: 1/2;
+  grid-row: 1/2;
+}
+#toast-std.show,
+#toast-v1.show,
+#toast-v2.show,
+#toast-v3.show {
+  visibility: visible;
+  -webkit-animation: fadein 0.5s, fadeout 0.5s 5s;
+  animation: fadein 0.5s, fadeout 0.5s 5s;
+}
+@-webkit-keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@-webkit-keyframes fadeout {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+@keyframes fadeout {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
 }
