--- a/pages/style.css
+++ b/pages/style.css
@@ -316,3 +316,28 @@ pre b {
     opacity: 0;
   }
 }
+.sui_grid_wrapper {
+  background: var(--SHADE2);
+  padding: 1rem;
+  border-radius: 8px;
+  box-shadow: 0 0 2px var(--BLACK-BG);
+  margin-top: 1rem;
+}
+.sui_grid_wrapper .sui_grid div {
+  background: var(--WHITE-A);
+  padding: 1rem;
+  border-radius: 4px;
+  border: 1px solid var(--SHADE3);
+  display: grid;
+  place-content: center;
+  font-size: 1.6rem;
+  font-weight: 500;
+}
+.sui_grid_wrapper .sui_grid div:hover {
+  transform: scale(0.95);
+  box-shadow: 0 0 2px var(--BLACK-BG);
+}
+.sui_grid_wrapper_vertical {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+}
