--- a/pages/components/avatar/avatar.html
+++ b/pages/components/avatar/avatar.html
@@ -31,6 +31,9 @@
     <nav></nav>
     <main>
       <h1>Avatar</h1>
+      <p class="sui_doc_p">
+        used as a graphical representation of a person through a profile picture or image, an icon, or a string with initials.
+      </p>
       <p id="rem_notice" class="sui_doc_p">
         Note: I have set the root font-size to 10px for this library.
       </p>
