--- a/pages/components/badge/badge.html
+++ b/pages/components/badge/badge.html
@@ -31,6 +31,9 @@
     <nav></nav>
     <main>
       <h1>Badge</h1>
+      <p class="sui_doc_p">
+        generates a small badge at the bottom-left / bottom-right of an avatar and at the top-right of an icon.
+      </p>
       <p id="rem_notice" class="sui_doc_p">
         Note: I have set the root font-size to 10px for this library.
       </p>
