--- a/pages/components/button/button.html
+++ b/pages/components/button/button.html
@@ -207,6 +207,9 @@
         <button class="sui_btn">
           <i class="fas fa-shopping-cart"></i>
         </button>
+        <button class="sui_btn btn_icon_fa">
+          <i class="fas fa-shopping-cart"></i>
+        </button>
         <button class="sui_btn">
           <i class="btn_icon fas fa-shopping-cart"></i>
           Add to Cart
@@ -230,17 +233,26 @@
 
       <div class="code_wrapper">
         <script type="text/plain" class="line-numbers language-markup">
+          <!-- Text Button -->
           <button class="sui_btn btn_txt">Text Button</button>
 
+          <!-- Icon Button -->
           <button class="sui_btn">
             <i class="fas fa-shopping-cart"></i>
           </button>
 
+          <!-- Icon Button without background -->
+          <button class="sui_btn btn_icon_fa">
+            <i class="fas fa-shopping-cart"></i>
+          </button>
+
+          <!-- Icon with Text -->
           <button class="sui_btn">
             <i class="btn_icon fas fa-shopping-cart"></i>
             Add to Cart
           </button>
 
+          <!-- Variations -->
           <button class="sui_btn btn_rnd btn_v1">
             <i class="btn_icon fas fa-shopping-cart"></i>
             Add to Cart
