--- a/pages/components/card/card.html
+++ b/pages/components/card/card.html
@@ -33,6 +33,12 @@
     <main>
       <!-- Card Intro START -->
       <h1>Card</h1>
+      <p class="sui_doc_p">
+        contains content and actions about a single subject. They should be easy
+        to scan for relevant and actionable information. Elements, like text and
+        images, should be placed on them in a way that clearly indicates
+        hierarchy.
+      </p>
       <p id="rem_notice" class="sui_doc_p">
         Note: I have set the root font-size to 10px for this library.
       </p>
