--- a/pages/components/lists/lists.html
+++ b/pages/components/lists/lists.html
@@ -30,6 +30,7 @@
     <nav></nav>
     <main>
       <h1>Lists</h1>
+      <p class="sui_doc_p">continuous, vertical indexes of text or images.</p>
       <p id="rem_notice" class="sui_doc_p">
         Note: I have set the root font-size to 10px for this library.
       </p>
