--- a/pages/components/modal/modal.html
+++ b/pages/components/modal/modal.html
@@ -30,6 +30,9 @@
     <nav></nav>
     <main>
       <h1>Modal</h1>
+      <p class="sui_doc_p">
+        provides a solid foundation for creating dialogs, popovers etc.
+      </p>
       <p id="rem_notice" class="sui_doc_p">
         Note: I have set the root font-size to 10px for this library.
       </p>
