--- a/pages/components/navigation/navigation.html
+++ b/pages/components/navigation/navigation.html
@@ -32,6 +32,9 @@
     <nav></nav>
     <main>
       <h1>Navigation</h1>
+      <p class="sui_doc_p">
+        allows movement between primary destinations in an app.
+      </p>
       <p id="rem_notice" class="sui_doc_p">
         Note: I have set the root font-size to 10px for this library.
       </p>
