--- a/pages/nav.css
+++ b/pages/nav.css
@@ -50,22 +50,16 @@ nav {
   align-items: center;
   gap: 2px;
   grid-area: nav;
-  margin: 0 3rem;
-  padding: 4rem 0;
+  margin: 4rem 0 0 3rem;
+  padding: 0 3rem 4rem 0;
   font-size: 1.6rem;
   position: relative;
   overflow: scroll;
-  /* Hide scrollbar for IE, Edge and Firefox */
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none; /* Firefox */
-}
-/* Hide scrollbar for Chrome, Safari and Opera */
-nav::-webkit-scrollbar {
-  display: none;
 }
 main {
   grid-area: main;
-  padding: 4rem 5%;
+  margin: 4rem 0 0;
+  padding: 0 5% 4rem;
   overflow-y: scroll;
   overflow-x: hidden;
   position: relative;
@@ -127,7 +121,7 @@ main {
     background: var(--BG);
     z-index: 2;
     width: 100%;
-    height: 100%;
+    height: calc(100% - 5rem);
     margin: 0;
     padding: 0;
     top: 6rem;
