--- a/pages/components/badge/badge.html
+++ b/pages/components/badge/badge.html
@@ -91,12 +91,12 @@
           <i class="av_badge bd_s bd_green"></i>
         </div>
         <div class="sui_avatar">
-          <img src="/assets/svg/cart.svg" alt="" />
-          <div class="bd_num bd_red">888</div>
+          <i class="fas fa-shopping-cart"></i>
+          <div class="bd_num bd_red">8</div>
         </div>
         <div class="sui_avatar">
-          <img src="/assets/svg/cart.svg" alt="" />
-          <div class="bd_num bd_red">8</div>
+          <i class="fas fa-shopping-cart"></i>
+          <div class="bd_num bd_red">888+</div>
         </div>
       </div>
 
