--- a/pages/components/lists/lists.css
+++ b/pages/components/lists/lists.css
@@ -1,10 +1,10 @@
 .sui_ul {
   list-style-type: none;
-  background: var(--WHITE);
+  background: var(--BG);
   border-radius: 4px;
   width: fit-content;
   padding: 1rem 2rem;
-  box-shadow: 0 0 2px 0 var(--BLACK-BG);
+  box-shadow: 0 0 2px 0 var(--TEXT);
 }
 .sui_ul_title {
   position: relative;
@@ -18,7 +18,7 @@
   position: absolute;
   bottom: 1rem;
   left: -10%;
-  background: var(--BLACK-BG);
+  background: var(--TEXT);
 }
 .sui_ul li {
   padding: 5px 0;
@@ -37,7 +37,7 @@
   color: var(--VARIANT-3-TXT-BG);
 }
 .sui_ul_stacked {
-  border: 1px solid var(--SHADE2);
+  border: 1px solid var(--SHADE);
   padding: 0;
   width: 100%;
 }
